2006-01-25  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/AssemblyFactory.cs:
		Don't trap exceptions.

	* Mono.Cecil/GenericParameter.cs
	  Mono.Cecil/IMethod.cs
	  Mono.Cecil/GenericInstanceType.cs
	  Mono.Cecil/TypeReference.cs
	  Mono.Cecil/GenericInstanceMethod.cs
	  Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil/TypeDefinition.cs
	  Mono.Cecil/IGenericArgumentCollection.cs
	  Mono.Cecil/ITypeReference.cs
	  Mono.Cecil/IGenericInstance.cs
	  Mono.Cecil/GenericArgumentCollection.cs
	  Mono.Cecil/MethodDefinition.cs
	  Mono.Cecil/MethodReference.cs
	  Mono.Cecil/ITypeDefinition.cs
	  Mono.Cecil/IGenericArgumentProvider.cs
	  Mono.Cecil/ReflectionWriter.cs
	  Mono.Cecil/GenericContext.cs
	  CodeGen/cecil.xml:
		Clean the generic api. This is not stable yet.

2006-01-24  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ArrayType.cs:
		Bug reported by  Vladislav Spivak (spivak@mainsoft.com).
		Fix a bug in array handling.
	* Mono.Cecil/ConstructorCollection.cs
	  CodeGen/templates/IndexedCollectionImplem.cs:
		Bug reported by Oleg Varchovsky (olegv@mainsoft.com).
		Fix the lookup of constructors.

2006-01-19  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/AssemblyName.cs:
		Fix computation of public key token.

2006-01-18  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Cil/CodeWriter.cs
	  Mono.Cecil.Metadata/MetadataToken.cs:
		Add an use an ToUInt method and use it.
	  CodeGen/templates/DebugHeader.cs
	  Mono.Cecil.Binary/DebugHeader.cs:
		Fix the size of the debug header.

	* Mono.Cecil/ModuleReference.cs
	  Mono.Cecil/AssemblyName.cs
	  Mono.Cecil/StructureReader.cs
	  Mono.Cecil/IMetadataScope.cs:
		Make IMetadataScope implement IMetadataTokenProvider.
	* Mono.Cecil/ReflectionWriter.cs:
		Fix a typo when saving nested type refs.

2006-01-17  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ArrayType.cs
	  Mono.Cecil/ArrayDimension.cs
	  Mono.Cecil/ReflectionWriter.cs:
		End arrays support.

2006-01-03  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/GenericParameter.cs